<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context=".MyActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_gravity="center_horizontal" android:id="@+id/rs">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcome_label"
                android:id="@+id/textView"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true" android:layout_alignParentEnd="true"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addContact_button"
                android:id="@+id/button"
                android:layout_marginTop="204dp" android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" android:onClick="renderAddContact"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectContact_button"
                android:id="@+id/button2"
                android:layout_below="@+id/button" android:layout_centerHorizontal="true"
                android:onClick="renderSelectContact"/>
    </RelativeLayout>
</LinearLayout>
