<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/r1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name_label"
                android:id="@+id/textView2"
                android:layout_marginTop="113dp" android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/email_label"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2" android:layout_alignParentStart="true"
                android:layout_marginTop="49dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phone_label"
                android:id="@+id/textView4"
                android:layout_centerVertical="true" android:layout_alignParentStart="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address_label"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4" android:layout_alignParentStart="true"
                android:layout_marginTop="58dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="Name"
                android:ems="10"
                android:id="@+id/editText"
                android:layout_alignTop="@+id/textView2" android:layout_alignParentEnd="true"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/editText2"
                android:layout_alignTop="@+id/editText3" android:layout_alignStart="@+id/editText"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText3"
                android:layout_alignBottom="@+id/textView3" android:layout_alignStart="@+id/editText2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText4" android:layout_above="@+id/textView5"
                android:layout_alignStart="@+id/editText2"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/editText5" android:layout_alignBottom="@+id/textView5"
                android:layout_alignStart="@+id/editText4"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok_label"
                android:id="@+id/button3" android:layout_below="@+id/editText5" android:layout_centerHorizontal="true"
                android:layout_marginTop="53dp" android:onClick="addContact"/>
    </RelativeLayout>
</LinearLayout>